styles/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|family=Open+Sans|Exo:100,200,300,400,500,600,700');

 
body{
  font: 15px/1.5 Arial, Helvetica,sans-serif;
  padding:0;
  margin:0;
  background-color:#ffffff;
  outline:none;
  box-sizing:border-box;
}




/*navbar*/
.navbar {
  background-color:#35424a;
  margin:0;
  padding:0;
}

.tallNav {
	height: 230px;
}
.odd {
  background-color:#ffffff;
  
  padding-bottom:20px;
  padding-left:20px;
  padding-right:20px;
}

.even {
  background-color:#e6e6e6;
  padding-top:20px;
  padding-bottom:20px;
  padding-left:20px;
  padding-right:20px;
}

/* Global */
.container{
  width:80%;
  margin:auto;
  overflow:hidden;
}

.sides{
  padding:0px;
  margin:0px;
}



.video-container {
  position: relative;
  
}
video {
  height: auto;
  vertical-align: middle;
  width: 100%;
}

ul{
  margin:0;
  padding:0;
}

.button_1{
  height:38px;
  background:#e8491d;
  border:0;
  padding-left: 20px;
  padding-right:20px;
  color:#ffffff;
}

.dark{
  padding:15px;
  background:#ffffff;
  color:#000000;
  margin-top:10px;
  margin-bottom:10px;
} 

.centered {
  text-align:center;
}

.center-block {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

header a:hover{
  color:red;
  font-weight:bold;
}

/* Showcase */
#showcase{
  min-height:400px;
  text-align:center;
  color:#ffffff;
}

#showcase h1{
  margin-top:100px;
  font-size:55px;
  margin-bottom:10px;
}

#showcase p{
  font-size:20px;
}

/* video-section */
#myVideo {
  height: 100%;
  z-index: 1;
  padding:0px;
}
*{
  box-sizing: border-box;
}


.v-header {
  height:10vh;
  display:flex;
  align-items:center;
  color:#fff;
}

.container{
  max-width:960px;
  /*padding-left: 1rem;*/
  margin:auto;
  text-align: center;
}

.fullscreen-video-wrap {
position: absolute;
top:0;
left:0;
width:100%;
height:100vh;
overflow:hidden; 
}

.fullscreen-video-wrap video{
  min-width:100%;
  min-height:100%; 
}

.header-overlay{
  height:100vh;
  width:100vw;
  position:absolute;
  top:0;
  left:0;
  background:#225470;
  z-index:1;
  opacity:0.45;
}

.header-content{
  z-index:2;
}

.header-content h1 {
font-size:50px;
margin-bottom:0;
}

.header-content p {
  font-size:1.5rem;
  margin-bottom:0;
  padding-bottom:2rem;
  }

.btn{
  background:green;
  color:#fff;
  font-size:1.2rem;
  padding:1rem 2rem;
  text-decoration:none; 
}
                       
.section{
  padding:20px 0;
}

.section-b{
  background:#333;
  color:#fff;
}

.section-d{
  background:#333;
  color:#fff;
}

/* Newsletter */
#newsletter{
  padding:5px;
  color:#ffffff;
  background:#e6e6e6;
  width:370px;
  height:150px;
}

#newsletter h1{
  float:left;
}

#newsletter form {
  float:right;
  margin-top:5px;
}

#newsletter input[type="email"]{
  padding:4px;
  height:25px;
  width:100px;
}


/* Boxes */
#boxes{
  margin-top:20px;
  background-color:#e6e6e6;
}

 #boxes .box{

  text-align: center;
   padding:10px; 
}

#boxes .box img{
  width:90px;
} 

/* circle */
#circle{
  margin-top:20px;
  background-color:#ffffff;
}

#circle .circle{
  float:left;
  text-align: center;
  width:30%;
  padding:10px;
}

#circle .circle img{
  width:90px;
}


/* Sidebar */
aside#sidebar{
  float:right;
  width:30%; 
  margin-top:10px;
}

aside#sidebar .quote input, aside#sidebar .quote textarea{
  width:90%;
  padding:5px;
}

/* Main-col */
#main {
  background-color:#ffffff;
}
article#main-col{
  float:left;
  width:65%;
  color:#000000;
}

/*About Us*/

#about-us {
  background-color:#ffffff;
}



#language {
  margin-top:20px;
  background-color:#e6e6e6;
}

#language .language{
  float:left;
  text-align: center;
  width:30%;
  padding:10px;
}

#language .language img{
  width:90px;
}

#languages {
  margin-top:20px;
  background-color:#ffffff;
}

#languages .languages{
  float:left;
  text-align: center;
  width:30%;
  padding:10px;
}

#languages .languages img{
  width:90px;
}




/* Services */
ul#services li{
  list-style: none;
  padding:20px;
  border: #cccccc solid 1px;
  margin-bottom:5px;
  background:#e6e6e6;
}



/*contact us */




/*footer*/
#footer {
  padding:20px;
  margin-top:0px; 
  color:#ffffff;
  background-color:#35424a;
  text-align:center;
  display:inline-block;

}



/*social media buttons*/


.round-icon {
  border: 3px solid black;
  border-radius: 50%;
  padding: 10px;
  color:#fff; /*text color of letter in circle*/
  width:42px;
}

#social_media-facebook-icon {
  background-color:#3b5998;

}

#social_media-facebook-icon:hover {
  color: #fff;
  background-color: #476bb8;
  border-color:#476bb8;
}


#social_media-twitter-icon {
  background-color:#55acee;
}

#social_media-twitter-icon:hover {
  color: #fff;
  background-color: #74bbf1;
  border-color:#74bbf1;
}

#social_media-linkedin-icon {
  background-color: #007bb5;
}

#social_media-linkedin-icon:hover {
  color: #fff;
  background-color:#009de6;
  border-color: #009de6;
}

#social_media-pintrest-icon {
  background-color: #cb2027;
}

#social_media-pintrest-icon:hover {
  color:#fff;
  background-color:#e0383e;
  border-color:#e0383e;
}

#social_media-instagram-icon {
  background-color: #e95950;
}

#social_media-instagram-icon:hover {
  color: #fff;
  background-color:#ee7f77;
  border-color:#ee7f77;
}

#designer {
  color: #ffffff;
  text-decoration: none;
}


.overlay-desc {
  background: rgba(0,0,0,0);
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}


/* Media Queries 

@media (min-width:768px) {
  .navbar {height:50px}
}

@media (min-width:769px) and (max-width:1200px){
  .navbar {height:50px}
}

@media (min-width:1201px) {
  .navbar {height:50px}  
}
*/



  aside#sidebar{
    float:none;
    text-align:center;
    width:100%;
  }
/*
  header{
    padding-bottom:20px;
  }
*/
  #showcase h1{
    margin-top:40px;
  }

  #newsletter button, .quote button{
    display:block;
    width:100%;
  }

  #newsletter form input[type="email"], .quote input, .quote textarea{
    width:100%;
    margin-bottom:5px;
  }

  /*get a quote form

h3{
  text-align:center;
}

.container{
  margin:auto;
  width:80%;
  border-radius:5px;
  background-color:#f2f2f2;
  background:url("images/typing.mp4") no-repeat;
  padding:20px;
}

input[type=text],select {
  width:40%;
  padding:12px;
  border:1px solid #ccc;
  margin-top:6px;
  margin-bottom:16px;
  border-radius:4px;
  resize:none;
  box-sizing: border-box;
}

input[type=submit]{
  background-color:#4caf50;
  color:white;
  padding:12px 20px;
  border:none;
  border-radius:4px;
  cursor:pointer;
}

input[type=contact-our-team]:hover{
 background-color:#45a049;
}
*/

